# NodePredict

./: README.md
node/: Cargo.toml
pallets/business/: Cargo.toml
pallets/business/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
